# HW-16

./: README.md  pyproject.toml
hw_16/: __init__.py
tests/: test_github_fixture.py
